--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,5 +15,5 @@
 
 
  .bRojo{
-    @apply text-white border border-white py-2.5 px-5 rounded-md hover:bg-red-800 hover:text-red-800 transition duration-500 ease-in-out;
+    @apply text-white bg-red-800 border border-white py-2.5 px-5 rounded-md hover:bg-red-800 hover:text-red-800 transition duration-500 ease-in-out;
 }
